Improved transactions DTO
