# backend/src/transaction/dto/list-transactions-query.dto.ts
@@ -2,8 +2,8 @@ import { Transform } from 'class-transformer';
 import { IsOptional, IsBoolean } from 'class-validator';
 
 export class ListTransactionsQueryDto {
-  @IsOptional()
   @IsBoolean()
+  @IsOptional()
   @Transform(({ value }) => value === 'true')
-  uncategorizedOnly?: boolean;
+  uncategorizedOnly?: boolean = false;
 }
